related tdf#166553 writerfilter: remove column-only mbIsSplitPara

It seems pointless to have a separate mbIsSplitPara
just for column breaks, when there is also a shared
m_pImpl->m_bIsSplitPara.

I'm sure the issues for breaking a paragraph in the middle
for a column break are the same as for a page break,
so the two cases shouldn't have to be handled separately.

DomainMapper_Impl::PushProperties now has special handling
for     (CONTEXT_PARAGRAPH && m_bIsSplitPara)
so it doesn't seem necessary to avoid that call for columns.
Plus, PushProperties was almost always called anyway
because usually CONTEXT_CHARACTER is at the top of the stack.

So lets just drop the earlier, column-only mbIsSplitPara,
since having two separate-but-similar flags just causes confusion.

The original commit's unit test is still OK.
mbIsSplitPara: added by 0c61ffc15ecd8122cb9102d2591561e1d4e37327
Author: Vinaya Mandke <vinaya.mandke@synerzip.com>
on Thu Dec 5 18:22:56 2013 +0530
  Fix for Column Break if it appears in w:r which is not the first run

m_bIsSplitPara: added later by 61e8452c62a587b40bf80076642b869cbd1b7ed6
Author: sushil_shinde <sushil.shinde@synerzip.com>
on Mon Apr 28 17:10:27 2014 +0530
  fdo#77727 PAGEBREAK In first paragraph was not rendered and exported

Change-Id: I164baedf012370b558c52b3a5b6c65e1316ea850
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188565
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>